集成sass，以及vant，完成底部导航

--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "normalize.css": "^8.0.1",
+    "pinia": "^2.1.7",
+    "vant": "^4.7.2",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-vue": "^4.4.0",
+    "sass": "^1.69.5",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11"
   }
 }
