--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.10",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
+    "underscore": "^1.13.6",
     "vant": "^4.7.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
