--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "pinia": "^2.1.7",
     "underscore": "^1.13.6",
     "vant": "^4.7.2",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-vue": "^4.4.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "sass": "^1.69.5",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11"
