--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.11.10",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "underscore": "^1.13.6",
     "vant": "^4.7.2",
     "vite-plugin-vue-setup-extend": "^0.4.0",
